# turing-machine-ai

./: Cargo.toml  Readme.md
benches/: booklet.rs
src/: code.rs  game.rs  gametree.rs  lib.rs  main.rs  verifier.rs
tests/: booklet.rs  challenges.rs
