[package]
name = "turing-machine-ai"
version = "0.1.0"
edition = "2021"
authors = ["Thomas den Hollander"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
itertools = "0.11"
bitmaps = "3"
thiserror = "1.0"
